<resources>
    <string name="app_name">Notely</string>
    <string name="action_settings">Settings</string>
    <string name="empty_quote">The way to get started is to quit talking and begin doing. -Walt Disney</string>
    <string name="title_activity_settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="key_theme">theme</string>
    <string name="category_display">Display</string>
    <string name="choose_theme">Choose theme</string>
    <string name="default_theme">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="app_logo">App Logo</string>
    <string name="share">Share</string>
    <string name="set_reminder">Add a reminder to this note</string>
    <string name="discard_changes">Any changes you have made will be discarded.</string>
    <string name="changes_saved">Changes saved</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="notes_deleted">Notes deleted</string>
    <string name="undo">Undo</string>
    <string name="note_deleted">Note deleted</string>
    <string name="color">Color</string>
    <string name="note_color">Note color</string>
    <string name="note_title">Note title (required)</string>
    <string name="note_text">Note text (required)</string>
    <string name="reminder_icon">Reminder icon</string>
    <string name="delete_reminder">Delete reminder</string>
    <string name="confirm_delete_message">This is permanent and can\'t be undone.</string>
    <string name="save">Save</string>
    <string name="discard_note">Discard</string>
    <string name="not_be_blank">Title and content cannot be blank</string>
    <string name="add_new_note">Add new note</string>
    <string name="ok">OK</string>
    <string name="delete_note">Delete note?</string>
    <string name="discard">Discard changes</string>
    <string name="cancel">Cancel</string>
    <string name="filter_icon">Filter Icon</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="undo_delete_snackbar">This action can be undone within 5 seconds</string>
    <string name="selected_note_identifier">Selected note identifier</string>
    <!-- String plurals and their related prefix / suffix strings -->
    <plurals name="delete_dialog_title">
        <item quantity="one" translation_description="Text for delete dialog title indicating that a single note is about to be deleted">Delete note?</item>
        <item quantity="other" translation_description="Text for delete dialog title indicating that more than one note is about to be deleted">Delete %d notes?</item>
    </plurals>
    <plurals name="undo_delete_snackbar_message">
        <item quantity="one" translation_description="Text for the undo delete snackbar indicating that a single note has been deleted">1 note deleted</item>
        <item quantity="other" translation_description="Text for the undo delete snackbar indicating that more than one note has been deleted">%d notes deleted</item>
    </plurals>
</resources>