<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_remind"
        android:orderInCategory="200"
        android:title="@string/set_reminder"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="300"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_color"
        android:orderInCategory="400"
        android:title="@string/color"
        app:showAsAction="never" />
</menu>