<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/category_display">

        <ListPreference
            app:defaultValue="@string/default_theme"
            app:dialogTitle="@string/choose_theme"
            app:entries="@array/pref_theme"
            app:entryValues="@array/pref_theme_values"
            app:icon="@drawable/ic_baseline_brightness"
            app:key="@string/key_theme"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="About">
        <Preference
            android:icon="@drawable/ic_baseline_person_outline_24"
            app:summary="Shazomii"
            app:title="Developer">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/shazomii" />
        </Preference>

        <Preference
            android:icon="@drawable/ic_baseline_code_24"
            app:summary="View project on Github"
            app:title="Contribute">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/shazomii/notely" />
        </Preference>

        <Preference
            app:selectable="false"
            app:summary="1.0.0"
            app:title="Version" />
    </PreferenceCategory>

</PreferenceScreen>